--- a/app/index.html
+++ b/app/index.html
@@ -7,7 +7,9 @@
   <title>Clear View Escapes</title>
   <meta name="keywords" content="Travel planning, travel bundles, travel escapes, affordable travel">
   <meta name="description" content="Your clarity. One trip away. We create soul restoring journeys that inspire you to be you.">
+  <link href='temp/styles/styles.css' rel='stylesheet' type='text/css'>
 </head>
+
 <body>
   <header>
     <img src="assets/images/icons/clear-view-escapes.svg">
